# 2030ai-contentzavod-template

./: .cursorignore  .env.example  .gitignore  AGENTS.md  README.md
.agents/skills/audit/: SKILL.md
.agents/skills/audit/agents/: openai.yaml
.agents/skills/contentpost/: SKILL.md
.agents/skills/mk/: SKILL.md
.agents/skills/mk/agents/: openai.yaml
.codex/skills/: authorstyle  contentpost
.cursor/skills/: mk
agent_docs/: architecture.md
content/: README.md
docs/: adr.md  architecture.md  audit-issues.md  concept.md  cost-estimate.md  development-history.md  index.md  roadmap.md
docs/guides/: article-writing-style.md  content-pipeline.md  dod.md  elevenlabs-setup.md  environment-setup.md  focus-group.md  pipeline-phase1-validation.md  pipeline-phase2-production.md  recording.md  scenario-structure.md  video-branding.md  video-to-article.md  voiceover-writing.md
docs/templates/: development-history.md
pipeline/: README.md  content-registry.md  pyproject.toml
pipeline/pipeline/: editor.py  frames.py  text_prep.py  tts.py  tts_verify.py
pipeline/tests/: test_editor.py  test_text_prep.py  test_tts.py  test_tts_verify.py
